# beetree

./: CLAUDE.md  Cargo.toml  README.md
docs/: SPEC.md  findings.md
docs/adr/: 0001-count-based-capacities.md  0002-merges-deferred-to-m2.md  0003-coalesced-buffers.md  0004-arena-append-only.md  0005-split-propagation-return-values.md  0006-read-trace-events.md  0007-no-wal-dual-superblock-commit.md  0008-variable-length-records-physical-offsets.md  0009-vfs-abstraction.md  0010-crash-model.md  0011-upserts-are-data.md  0012-format-v2-no-migration.md  0013-parallel-v2-trace-vocabulary.md  0014-collect-scans-no-cursor.md  0015-bounded-node-cache.md  0016-eps-derived-annotation.md  0017-pluggable-flush-policy.md
docs/analysis/: FALSIFICATION.md
docs/analysis/data/: ascending-i100.csv  ascending-i1000.csv  uniform-load-i100.csv  uniform-load-i1000.csv  upsert-heavy-i100.csv  upsert-heavy-i1000.csv  ycsb-a-i100.csv  ycsb-a-i1000.csv  ycsb-a-zipfian-i100.csv  ycsb-a-zipfian-i1000-f16b64l8.csv  ycsb-a-zipfian-i1000.csv  zipfian-load-i100.csv  zipfian-load-i1000.csv
docs/analysis/data/confirmation/: ycsb-a-i1000-f16b64l8-s1.csv  ycsb-a-i1000-f32b256l8-s1.csv  (+4 more)
docs/bench/: RESULTS.md
docs/bench/results/: e1.csv  e2.csv  e3.csv  e4.csv  e5.csv
examples/: counter.rs
src/: betree.rs  check.rs  disk.rs  engine.rs  format.rs  lib.rs  naive.rs  node.rs  policy.rs  trace.rs  types.rs  vfs.rs  workload.rs
tests/: betree.rs  cache.rs  cache_harness.rs  cost_model.rs  counter.rs  crash.rs  disk.rs  harness.rs  harness2.rs  policy_regression.rs
(+6 files in other folders)
