[package]
name = "beetree"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A readable reference implementation of a Bε-tree storage engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Binary serialization of node records and superblocks for the on-disk
# format v1 (docs/SPEC.md). Configured little-endian + fixed-int so the
# encoding is byte-stable and platform-independent; the "serde" feature
# reuses the serde derives the crate already carries for traces.
bincode = { version = "2", features = ["serde"] }
# CRC-32 checksums over superblocks and node records: torn or corrupted
# data must be DETECTED and reported as a typed error, never returned as
# answers (SPEC, "Durability contract").
crc32fast = "1"

[dev-dependencies]
proptest = "1"
# Fresh temporary directories per test case for DiskEngine database files.
tempfile = "3"
